classDiagram

%% === Organisation & Tenancy ===
class Organisation {
  +id: UUID
  +nom: String
  +description: String?
  +siret: String?
  +adresse: String?
  +telephone: String?
  +email: String?
  +actif: Boolean
  +etat: String
}

class Compte {
  +id: UUID
  +nom: String
  +etat: String
  +dateCreation: String
  +createdByUserId: String
}

class Utilisateur {
  +id: UUID
  +keycloakId: String?
  +nom: String
  +prenom: String
  +email: String
  +telephone: String
  +actif: Boolean
}

class Role {
  +id: UUID
  +code: String
  +nom: String
  +description: String
}

class Permission {
  +id: UUID
  +code: String
  +description: String
}

class RolePermission {
  +id: UUID
  +roleId: UUID
  +permissionId: UUID
}

class MembreOrganisation {
  +id: UUID
  +organisationId: UUID
  +utilisateurId: UUID
  +roleId: String
  +etat: String
  +dateInvitation: DateTime?
  +dateActivation: DateTime?
}

class InvitationOrganisation {
  +id: UUID
  +organisationId: UUID
  +emailInvite: String
  +roleId: UUID
  +token: String
  +expireAt: DateTime
  +etat: String
}

class Notification {
  +id: UUID
  +organisationId: UUID
  +utilisateurId: UUID
  +type: String
  +titre: String
  +message: String
  +lu: Boolean
  +metadata: JSON?
  +lienUrl: String?
}

%% === Groupes & Societes ===
class Groupe {
  +id: UUID
  +organisationId: UUID
  +nom: String
  +description: String?
  +type: String
}

class Societe {
  +id: UUID
  +organisationId: String
  +raisonSociale: String
  +siren: String
  +numeroTVA: String
}

class GroupeEntite {
  +id: UUID
  +groupeId: UUID
  +entiteId: UUID
  +type: String?
}

class MembreGroupe {
  +id: UUID
  +membreCompteId: String
  +groupeId: String
  +roleLocal: String
}

%% === CRM - Clients ===
class ClientBase {
  +id: UUID
  +organisationId: UUID
  +typeClient: String
  +nom: String
  +prenom: String
  +dateNaissance: Date?
  +compteCode: String
  +partenaireId: String
  +dateCreation: DateTime
  +telephone: String
  +email: String?
  +statutId: String
}

class ClientEntreprise {
  +id: UUID
  +raisonSociale: String
  +numeroTVA: String
  +siren: String
}

ClientBase <|-- ClientEntreprise

class AffectationGroupeClient {
  +id: UUID
  +groupeId: String
  +clientBaseId: String
}

class ClientPartenaire {
  +id: UUID
  +clientBaseId: String
  +partenaireId: String
  +rolePartenaireId: String
  +validFrom: String
  +validTo: String
}

class Adresse {
  +id: UUID
  +clientBaseId: UUID
  +ligne1: String
  +ligne2: String?
  +codePostal: String
  +ville: String
  +pays: String
  +type: String
}

%% === CRM - Contrats ===
class Contrat {
  +id: UUID
  +organisationId: UUID
  +clientBaseId: UUID
  +societeId: UUID
  +commercialId: UUID
  +clientPartenaireId: UUID
  +conditionPaiementId: UUID
  +modeleDistributionId: UUID
  +facturationParId: UUID
  +adresseFacturationId: UUID
  +referenceExterne: String
  +dateSignature: String
  +dateDebut: String
  +dateFin: String
  +statutId: String
  +autoRenouvellement: Boolean
  +joursPreavis: Integer
  +dateFinRetractation: String
}

class LigneContrat {
  +id: UUID
  +contratId: String
  +produitId: String
  +periodeFacturationId: String
  +quantite: Decimal
  +prixUnitaire: Decimal
}

class HistoriqueStatutContrat {
  +id: UUID
  +contratId: String
  +ancienStatutId: String
  +nouveauStatutId: String
  +dateChangement: String
}

class PieceJointe {
  +id: UUID
  +nomFichier: String
  +url: String
  +dateUpload: String
}

class ContractOrchestrationHistory {
  +id: UUID
  +contractId: String
  +operation: String
  +status: String
  +payload: JSON?
  +responsePayload: JSON?
  +errorMessage: String?
  +startedAt: DateTime
  +finishedAt: DateTime?
}

%% === CRM - Factures ===
class Facture {
  +id: UUID
  +organisationId: UUID
  +clientBaseId: UUID
  +contratId: UUID?
  +clientPartenaireId: UUID
  +statutId: UUID
  +emissionFactureId: UUID
  +adresseFacturationId: UUID
  +numero: String
  +dateEmission: String
  +montantHT: Decimal
  +montantTTC: Decimal
}

%% === CRM - Activites ===
class Activite {
  +id: UUID
  +typeId: String
  +clientBaseId: String
  +contratId: String
  +clientPartenaireId: String
  +dateActivite: String
  +sujet: String
  +commentaire: String
  +echeance: String
}

%% === Expeditions & Suivi ===
class TransporteurOrganisation {
  +id: UUID
  +organisationId: String
  +type: String
  +contractNumber: String
  +password: String
  +labelFormat: String
  +actif: Boolean
}

class Expedition {
  +id: UUID
  +organisationId: String
  +clientBaseId: String
  +contratId: UUID?
  +transporteurCompteId: String
  +produitId: UUID?
  +trackingNumber: String
  +etat: String
  +dateCreation: DateTime
  +dateDernierStatut: DateTime
  +labelUrl: String
  +referenceCommande: String
  +nomProduit: String?
  +poids: Decimal?
  +adresseDestination: String?
  +villeDestination: String?
  +codePostalDestination: String?
  +dateExpedition: DateTime?
  +dateLivraisonEstimee: DateTime?
  +dateLivraison: DateTime?
  +lieuActuel: String?
}

class Colis {
  +id: UUID
  +expeditionId: String
  +poidsGr: Integer
  +longCm: Integer
  +largCm: Integer
  +hautCm: Integer
  +valeurDeclaree: Decimal
  +contenu: String
}

class EvenementSuivi {
  +id: UUID
  +expeditionId: String
  +code: String
  +label: String
  +dateEvenement: String
  +lieu: String
  +raw: String
}

%% === Produits & Tarification ===
class Produit {
  +id: UUID
  +sku: String
  +nom: String
  +description: String
  +actif: Boolean
}

class GrilleTarifaire {
  +id: UUID
  +nom: String
  +dateDebut: String
  +dateFin: String
  +estParDefaut: Boolean
}

class PrixProduit {
  +id: UUID
  +produitId: String
  +grilleTarifaireId: String
  +periodeFacturationId: String
  +prix: Decimal
  +remisePourcent: Decimal
}

%% === Partenaires Marque Blanche ===
class PartenaireMarqueBlanche {
  +id: UUID
  +denomination: String
  +siren: String
  +numeroTVA: String
  +contactSupportEmail: String
  +telephone: String
  +statutId: String
}

class ThemeMarque {
  +id: UUID
  +logoUrl: String
  +couleurPrimaire: String
  +couleurSecondaire: String
  +faviconUrl: String
}

class MembrePartenaire {
  +id: UUID
  +utilisateurId: UUID
  +partenaireMarqueBlancheId: UUID
  +role: String
}

%% === Email / BoiteMail ===
class BoiteMail {
  +id: UUID
  +utilisateurId: String
  +nom: String
  +adresseEmail: String
  +fournisseur: String
  +typeConnexion: String
  +serveurSMTP: String?
  +portSMTP: Integer?
  +serveurIMAP: String?
  +portIMAP: Integer?
  +utiliseSsl: Boolean
  +utiliseTls: Boolean
  +username: String?
  +motDePasse: String?
  +clientId: String?
  +clientSecret: String?
  +refreshToken: String?
  +accessToken: String?
  +tokenExpiration: DateTime?
  +signatureHtml: String?
  +signatureTexte: String?
  +estParDefaut: Boolean
  +actif: Boolean
}

%% === Referentiels ===
class StatutContrat {
  +id: UUID
  +code: String
  +nom: String
  +description: String
  +ordreAffichage: Integer
}

class StatutClient {
  +id: UUID
  +code: String
  +nom: String
  +description: String
  +ordreAffichage: Integer
}

class StatutFacture {
  +id: UUID
  +code: String
  +nom: String
  +description: String
  +ordreAffichage: Integer
}

class StatutPartenaire {
  +id: UUID
  +code: String
  +nom: String
  +description: String
  +ordreAffichage: Integer
}

class TypeActivite {
  +id: UUID
  +code: String
  +nom: String
  +description: String
}

class ConditionPaiement {
  +id: UUID
  +code: String
  +nom: String
  +description: String
  +delaiJours: Integer
}

class ModeleDistribution {
  +id: UUID
  +code: String
  +nom: String
  +description: String
}

class FacturationPar {
  +id: UUID
  +code: String
  +nom: String
  +description: String
}

class PeriodeFacturation {
  +id: UUID
  +code: String
  +nom: String
  +description: String
}

class EmissionFacture {
  +id: UUID
  +code: String
  +nom: String
  +description: String
}

class RolePartenaire {
  +id: UUID
  +code: String
  +nom: String
  +description: String
}

%% ============================================
%% RELATIONS
%% ============================================

%% === Organisation & Tenancy ===
Organisation "1" --> "0..*" MembreOrganisation : membres
Organisation "1" --> "0..*" InvitationOrganisation : invitations
Organisation "1" --> "0..*" Notification : notifications
Organisation "1" --> "0..*" Groupe : groupes
Organisation "1" --> "0..*" Societe : societes
Organisation "1" --> "0..*" ClientBase : clients
Organisation "1" --> "0..*" Contrat : contrats
Organisation "1" --> "0..*" Facture : factures
Organisation "1" --> "0..*" TransporteurOrganisation : transporteurs

Utilisateur "1" --> "0..*" MembreOrganisation : appartient
Utilisateur "1" --> "0..*" MembrePartenaire : partenaires
Utilisateur "1" --> "0..*" BoiteMail : boitesMail
Utilisateur "1" --> "0..*" Notification : notifications

Role "1" --> "0..*" InvitationOrganisation : assigne
Role "1" --> "0..*" RolePermission : definit
Permission "1" --> "0..*" RolePermission : inclus

%% === Groupes & Societes ===
Groupe "1" --> "0..*" GroupeEntite : entites
Groupe "1" --> "0..*" MembreGroupe : membres
Groupe "1" --> "0..*" AffectationGroupeClient : clients
Societe "1" --> "0..*" GroupeEntite : groupes
Societe "1" --> "0..*" Contrat : contrats

%% === CRM Clients ===
ClientBase "1" --> "0..*" Adresse : adresses
ClientBase "1" --> "0..*" Contrat : contrats
ClientBase "1" --> "0..*" Facture : factures
ClientBase "1" --> "0..*" Activite : activites
ClientBase "1" --> "0..*" ClientPartenaire : partenaires
ClientBase "1" --> "0..*" Expedition : expeditions
ClientBase "1" --> "0..*" AffectationGroupeClient : groupes

%% === CRM Contrats ===
Contrat "1" --> "0..*" LigneContrat : lignes
Contrat "1" --> "0..*" HistoriqueStatutContrat : historique
Contrat "1" --> "0..*" ContractOrchestrationHistory : orchestrations
Contrat "0..1" --> "0..*" Facture : factures
Contrat "0..1" --> "0..*" Expedition : expeditions

Utilisateur "1" --> "0..*" Contrat : commercial
ClientPartenaire "1" --> "0..*" Contrat : contrats
ClientPartenaire "1" --> "0..*" Facture : factures
Adresse "1" --> "0..*" Contrat : adresseFacturation
Adresse "1" --> "0..*" Facture : adresseFacturation

%% === Referentiels -> Contrats ===
ConditionPaiement "1" --> "0..*" Contrat : conditionPaiement
ModeleDistribution "1" --> "0..*" Contrat : modeleDistribution
FacturationPar "1" --> "0..*" Contrat : facturationPar

%% === Referentiels -> Factures ===
StatutFacture "1" --> "0..*" Facture : statut
EmissionFacture "1" --> "0..*" Facture : emission

%% === Referentiels -> Activites ===
TypeActivite "1" --> "0..*" Activite : type

%% === Expeditions ===
TransporteurOrganisation "1" --> "0..*" Expedition : expeditions
Expedition "1" --> "0..*" Colis : colis
Expedition "1" --> "0..*" EvenementSuivi : evenements
Produit "0..1" --> "0..*" Expedition : expeditions

%% === Produits & Tarification ===
Produit "1" --> "0..*" PrixProduit : prix
Produit "1" --> "0..*" LigneContrat : lignesContrat
GrilleTarifaire "1" --> "0..*" PrixProduit : prix
PeriodeFacturation "1" --> "0..*" PrixProduit : prix
PeriodeFacturation "1" --> "0..*" LigneContrat : lignesContrat

%% === Partenaires Marque Blanche ===
PartenaireMarqueBlanche "1" --> "0..*" MembrePartenaire : membres
PartenaireMarqueBlanche "1" --> "0..1" ThemeMarque : theme
StatutPartenaire "1" --> "0..*" PartenaireMarqueBlanche : statut
RolePartenaire "1" --> "0..*" ClientPartenaire : role
